--- a/CSS/main.css
+++ b/CSS/main.css
@@ -70,6 +70,9 @@ iframe {
     overflow: hidden;
     width: 100%;
     height: 100%;
+    -webkit-border-radius: 16;
+    -moz-border-radius: 16px;
+    border-radius: 16px;
 }
 
 /* Setup the iframe wrapper and two videos within so they overlap */
