removed box shadow on grid items

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -43,7 +43,8 @@ html,
 body,
 main {
     height: 96%;
-    background-color: rgb(245, 245, 245);
+    /*background-color: rgb(245, 245, 245);*/
+    background-color: black;
 }
 
 /* Buttons */
