--- a/CSS/main.css
+++ b/CSS/main.css
@@ -43,8 +43,7 @@ html,
 body,
 main {
     height: 96%;
-    /*background-color: rgb(245, 245, 245);*/
-    background-color: black;
+    background-color: rgb(245, 245, 245);
 }
 
 /* Buttons */
@@ -71,9 +70,10 @@ iframe {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    -webkit-border-radius: 512;
-    -moz-border-radius: 512px;
-    border-radius: 512px;
+    -webkit-border-radius: 16;
+    -moz-border-radius: 16px;
+    border-radius: 16px;
+    box-shadow: 0px 0px 2px 2px rgb(230, 230, 230);
 }
 
 /* Setup the iframe wrapper and two videos within so they overlap */
