--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,18 +1,61 @@
+/*===============================================================*/
+/* Mobile Styles */
+@media only screen and (max-width: 500px) {
+    .container {
+        display: grid;
+
+        grid-template-columns: 30px 1fr;
+        grid-template-rows: 1fr 11fr;
+
+        grid-template-areas:
+        "sidebar header"
+        ". main";
+
+        column-gap: 10px;
+        row-gap: 15px;
+    }
+}
+
+/*===============================================================*/
+/* Tablet Styles */
+@media only screen and (min-width: 501px) and (max-width: 960px) {
+    .container {
+        display: grid;
+
+        grid-template-columns: 1fr 3% 11fr;
+        grid-template-rows: 30px 1fr;
+
+        grid-template-areas:
+            "header header header"
+            "sidebar . main";
+
+        column-gap: 10px;
+        row-gap: 15px;
+    }
+}
+
+/*===============================================================*/
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+    .container {
+        display: grid;
+
+        grid-template-columns: 1fr 3% 11fr;
+        grid-template-rows: 30px 1fr;
+
+        grid-template-areas:
+            "header header header"
+            "sidebar . main";
+
+        column-gap: 10px;
+        row-gap: 15px;
+    }
+
+}
+
 /* ------ GRID stuff ------ */
 
-.container {
-    display: grid;
 
-    grid-template-columns: 1fr 3% 11fr;
-    grid-template-rows: 30px 1fr;
-
-    grid-template-areas:
-        "header header header"
-        "sidebar . main";
-
-    column-gap: 10px;
-    row-gap: 15px;
-}
 
 .item-a {
     grid-area: header;
