--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,15 +5,20 @@
         display: grid;
 
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 2fr 11fr;
+        grid-template-rows: 1fr 22fr;
 
         grid-template-areas:
-        "header"
-        "sidebar"
-        "main";
+            "header"
+            "main";
 
         column-gap: 10px;
         row-gap: 15px;
+    }
+    #crop {
+        border-top: 7rem solid rgb(0,0,0);
+        border-bottom: 7rem solid rgb(0,0,0);
+        border-radius: 16px;
+        z-index: 2;
     }
 }
 
@@ -23,15 +28,21 @@
     .container {
         display: grid;
 
-        grid-template-columns: 1fr 3% 11fr;
+        grid-template-columns: 1fr;
         grid-template-rows: 30px 1fr;
 
         grid-template-areas:
-            "header header header"
-            "sidebar . main";
+            "header"
+            "main";
 
         column-gap: 10px;
         row-gap: 15px;
+    }
+    #crop {
+        border-top: 7rem solid rgb(0,0,0);
+        border-bottom: 7rem solid rgb(0,0,0);
+        border-radius: 16px;
+        z-index: 2;
     }
 }
 
@@ -41,21 +52,28 @@
     .container {
         display: grid;
 
-        grid-template-columns: 1fr 3% 11fr;
-        grid-template-rows: 30px 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: 10px 1fr;
 
         grid-template-areas:
-            "header header header"
-            "sidebar . main";
+            "header"
+            "main";
 
         column-gap: 10px;
         row-gap: 15px;
+    }
+    #crop {
+        border-left: 10rem solid rgb(0,0,0);
+        border-right: 10rem solid rgb(0,0,0);
+        border-top: 3rem solid rgb(0,0,0);
+        border-bottom: 3rem solid rgb(0,0,0);
+        border-radius: 16px;
+        z-index: 2;
     }
 
 }
 
 /* ------ GRID stuff ------ */
-
 
 
 .item-a {
@@ -86,8 +104,10 @@
 html,
 body,
 main {
-    height: 96%;
-    background-color: rgb(8, 8, 8);
+    height: 100%;
+    overflow: hidden;
+    /* background-color: rgb(8, 8, 8); */
+    background-color: rgb(0,0,0);
 }
 
 /* Buttons */
@@ -117,7 +137,8 @@ iframe {
     -webkit-border-radius: 16;
     -moz-border-radius: 16px;
     border-radius: 16px;
-    box-shadow: 0px 0px 2px 2px rgb(230, 230, 230);
+    /* box-shadow: 0px 0px 10px 2px rgb(0, 0, 0); */
+    pointer-events: none
 }
 
 /* Setup the iframe wrapper and two videos within so they overlap */
@@ -128,32 +149,20 @@ iframe {
     height: 100%;
 }
 
-.iframe-one {
+.iframe-one,
+.iframe-two,
+.iframe-three,
+.iframe-four,
+.iframe-five,
+.cropper {
     grid-column-start: 1;
     grid-row-start: 1;
-    z-index: 2;
 }
 
-.iframe-two {
-    grid-column-start: 1;
-    grid-row-start: 1;
-    z-index: 1;
-}
-
-.iframe-three {
-    grid-column-start: 1;
-    grid-row-start: 1;
-    z-index: 1;
-}
-
-#playerOne {
-    opacity: .5;
-}
-
-#playerTwo {
-    opacity: .5;
-}
-
-#playerTwo {
-    opacity: 0.5;
+#playerOne,
+#playerTwo,
+#playerThree,
+#playerFour,
+#playerFive {
+    opacity: 0.6;
 }
