--- a/CSS/main.css
+++ b/CSS/main.css
@@ -15,8 +15,8 @@
         row-gap: 15px;
     }
     #crop {
-        border-top: 7rem solid rgb(0,0,0);
-        border-bottom: 7rem solid rgb(0,0,0);
+        border-top: 1rem solid rgb(0,0,0);
+        border-bottom: 1rem solid rgb(0,0,0);
         border-radius: 16px;
         z-index: 2;
     }
@@ -39,8 +39,8 @@
         row-gap: 15px;
     }
     #crop {
-        border-top: 7rem solid rgb(0,0,0);
-        border-bottom: 7rem solid rgb(0,0,0);
+        border-top: 2rem solid rgb(0,0,0);
+        border-bottom: 2rem solid rgb(0,0,0);
         border-radius: 16px;
         z-index: 2;
     }
@@ -65,8 +65,8 @@
     #crop {
         border-left: 10rem solid rgb(0,0,0);
         border-right: 10rem solid rgb(0,0,0);
-        border-top: 3rem solid rgb(0,0,0);
-        border-bottom: 3rem solid rgb(0,0,0);
+        
+        
         border-radius: 16px;
         z-index: 2;
     }
@@ -83,7 +83,7 @@
 
 .item-b {
     grid-area: main;
-    padding: 10px;
+    padding: 2px;
 }
 
 /* sidebar with a grid within it for the control buttons*/
@@ -104,7 +104,7 @@
 html,
 body,
 main {
-    height: 100%;
+    height: 96%;
     overflow: hidden;
     /* background-color: rgb(8, 8, 8); */
     background-color: rgb(0,0,0);
@@ -153,7 +153,6 @@ iframe {
 .iframe-two,
 .iframe-three,
 .iframe-four,
-.iframe-five,
 .cropper {
     grid-column-start: 1;
     grid-row-start: 1;
@@ -162,7 +161,6 @@ iframe {
 #playerOne,
 #playerTwo,
 #playerThree,
-#playerFour,
-#playerFive {
+#playerFour {
     opacity: 0.6;
 }
