--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,18 +5,15 @@
         display: grid;
 
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 22fr;
+        grid-template-rows: 1fr;
 
         grid-template-areas:
-            "header"
             "main";
 
-        column-gap: 10px;
-        row-gap: 15px;
     }
+
     #crop {
-        border-top: 1rem solid rgb(0,0,0);
-        border-bottom: 1rem solid rgb(0,0,0);
+        border: 5rem solid rgb(0, 0, 0);
         border-radius: 16px;
         z-index: 2;
     }
@@ -29,18 +26,15 @@
         display: grid;
 
         grid-template-columns: 1fr;
-        grid-template-rows: 30px 1fr;
+        grid-template-rows: 1fr;
 
         grid-template-areas:
-            "header"
             "main";
 
-        column-gap: 10px;
-        row-gap: 15px;
     }
+
     #crop {
-        border-top: 2rem solid rgb(0,0,0);
-        border-bottom: 2rem solid rgb(0,0,0);
+        border: 5rem solid rgb(0, 0, 0);
         border-radius: 16px;
         z-index: 2;
     }
@@ -53,20 +47,15 @@
         display: grid;
 
         grid-template-columns: 1fr;
-        grid-template-rows: 10px 1fr;
+        grid-template-rows: 1fr;
 
         grid-template-areas:
-            "header"
             "main";
 
-        column-gap: 10px;
-        row-gap: 15px;
     }
+
     #crop {
-        border-left: 10rem solid rgb(0,0,0);
-        border-right: 10rem solid rgb(0,0,0);
-        
-        
+        border: 5rem solid rgb(0, 0, 0);
         border-radius: 16px;
         z-index: 2;
     }
@@ -83,16 +72,13 @@
 
 .item-b {
     grid-area: main;
-    padding: 2px;
 }
 
 /* sidebar with a grid within it for the control buttons*/
 .item-c {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    column-gap: 10px;
-    row-gap: 15px;
+    grid-template-rows: 1fr;
 
     grid-area: sidebar;
     justify-content: center;
@@ -104,10 +90,17 @@
 html,
 body,
 main {
-    height: 96%;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
+
     /* background-color: rgb(8, 8, 8); */
-    background-color: rgb(0,0,0);
+    background-color: rgb(0, 0, 0);
+}
+
+footer {
+    height: 0%;
+    width: 0%;
 }
 
 /* Buttons */
@@ -131,7 +124,7 @@ button:active {
 
 iframe {
     border: 0px;
-    overflow: hidden;
+
     width: 100%;
     height: 100%;
     -webkit-border-radius: 16;
