--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -51,6 +51,7 @@ main {
     width: 100%;
     overflow: hidden;
     background-color: rgb(0, 0, 0);
+    margin: 0;
 }
 
 /* Format the landing page */
