--- a/CSS/about.css
+++ b/CSS/about.css
@@ -67,7 +67,7 @@ a:active {
     font-family: 'Lexend', sans-serif;
 
     text-align: justify;
-    font-size: 3.3vmax;
+    font-size: 5.3vmin;
     /* width: 96%;
     height: 96%; */
     margin: 3vmax;
