--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,19 +3,15 @@
 @media only screen and (max-width: 600px) {
     .container {
         display: grid;
-
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-
         grid-template-areas:
             "main";
-
     }
 
     #crop {
         border: 2rem solid rgb(0, 0, 0);
-        border-radius: 16px;
-        z-index: 20;
+        z-index: 10;
     }
 }
 
@@ -24,19 +20,15 @@
 @media only screen and (min-width: 601px) and (max-width: 960px) {
     .container {
         display: grid;
-
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-
         grid-template-areas:
             "main";
-
     }
 
     #crop {
         border: 5rem solid rgb(0, 0, 0);
-        border-radius: 16px;
-        z-index: 20;
+        z-index: 10;
     }
 }
 
@@ -45,19 +37,15 @@
 @media only screen and (min-width: 961px) {
     .container {
         display: grid;
-
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-
         grid-template-areas:
             "main";
-
     }
 
     #crop {
         border: 5rem solid rgb(0, 0, 0);
-        border-radius: 16px;
-        z-index: 20;
+        z-index: 10;
     }
 
 }
@@ -93,6 +81,7 @@ main {
     overflow: hidden;
     background-color: rgb(0, 0, 0);
     margin: 0;
+    font-family: 'Lexend', sans-serif;
 }
 
 footer {
@@ -102,12 +91,8 @@ footer {
 
 iframe {
     border: 0px;
-
     width: 100%;
     height: 100%;
-    -webkit-border-radius: 16;
-    -moz-border-radius: 16px;
-    border-radius: 16px;
     /* box-shadow: 0px 0px 10px 2px rgb(0, 0, 0); */
     pointer-events: none
 }
@@ -124,7 +109,8 @@ iframe {
 .iframe-two,
 .iframe-three,
 .iframe-four,
-.cropper {
+.cropper,
+#pressToStartDiv {
     grid-column-start: 1;
     grid-row-start: 1;
 }
@@ -144,18 +130,6 @@ a:active {
     cursor: pointer;
 }
 
-#landing {
-    color: white;
-    font-family: 'Lexend', sans-serif;
-
-    text-align: justify;
-    font-size: 3.3vmax;
-    /* width: 96%;
-    height: 96%; */
-    margin: 3vmax;
-    padding-right: 5%;
-}
-
 .svg {
     position: absolute;
     right: 10px;
@@ -163,4 +137,27 @@ a:active {
     z-index: 3;
     height: 7%;
     width: 7%;
+}
+
+#pressToStartDiv {
+    z-index: 9;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+    grid-template-areas:
+        ". . ."
+        ". waitingText ."
+        ". . .";
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+}
+
+#waitingText {
+    grid-area: waitingText;
+    text-align: center;
+    font-size: 6vmin;
+    color: white;
+    padding: 4vmin;
 }
