--- a/CSS/main.css
+++ b/CSS/main.css
@@ -142,22 +142,22 @@ a:active {
 #pressToStartDiv {
     z-index: 9;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 3.33fr 1fr;
+    grid-template-rows: 1fr 3.33fr 1fr;
 
     grid-template-areas:
         ". . ."
         ". waitingText ."
         ". . .";
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     background-color: rgb(0, 0, 0);
 }
 
 #waitingText {
     grid-area: waitingText;
     text-align: center;
-    font-size: 6vmin;
+    font-size: 4vmin;
     color: white;
-    padding: 4vmin;
+    padding: 1vmin;
 }
