--- a/CSS/about.css
+++ b/CSS/about.css
@@ -91,6 +91,7 @@ table {
 a, u {
     text-decoration: none;
     color: rgb(157, 234, 236);
+    animation: pulse 1s 3s;
   }
 
 th, td {
@@ -100,4 +101,21 @@ th, td {
     margin: 3vmax;
     padding-right: 5%;
     font-size: 2.3vmax;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(1.2);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.6);
+	}
+
+	100% {
+		transform: scale(1.2);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5);
+	}
 }
