--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -64,7 +64,10 @@ a:active {
 
 a, u {
     text-decoration: none;
-    color: rgb(157, 234, 236);
+    color: rgb(101, 247, 252);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+	transform: scale(1);
+	animation: pulse 1s 3s;
   }
 
 .landing {
@@ -82,4 +85,21 @@ th, td {
     margin: 3vmax;
     padding-right: 5%;
     font-size: 2.3vmax;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(1.2);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.6);
+	}
+
+	100% {
+		transform: scale(1.2);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5);
+	}
 }
