YouTube videos fade with oscillators and seperated out the usefulFunctions.js and updated about

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -99,9 +99,11 @@ th, td {
     color: white;
     font-family: 'Lexend', sans-serif;
     margin: 3vmax;
-    padding-right: 5%;
+    padding: 1%;
     font-size: 2.3vmax;
+    width: 33%;
 }
+
 
 @keyframes pulse {
 	0% {
