--- a/CSS/about.css
+++ b/CSS/about.css
@@ -18,13 +18,14 @@
     display: grid;
 
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 3fr 1fr 10fr;
+    grid-template-rows: 1fr 3fr 1fr 1fr 10fr;
 
     grid-template-areas:
         "header-one"
         "header-two"
         "header-three"
-        "header-four";
+        "header-four"
+        "header-five";
 }
 
 .header-one {
@@ -41,6 +42,10 @@
 
 .header-four {
     grid-area: header-four;
+}
+
+.header-five {
+    grid-area: header-five;
 }
 
 /* ------ Body stuff ------ */
@@ -104,6 +109,10 @@ th, td {
     width: 33%;
 }
 
+img {
+    width: 80%;
+    height: 80%;
+}
 
 @keyframes pulse {
 	0% {
