--- a/CSS/about.css
+++ b/CSS/about.css
@@ -53,7 +53,6 @@ body,
 main {
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
     background-color: rgb(0, 0, 0);
     margin: 0;
 }
@@ -66,7 +65,7 @@ a:active {
     cursor: pointer;
 }
 
-#landing {
+.landing {
     color: white;
     font-family: 'Lexend', sans-serif;
 
@@ -87,16 +86,6 @@ a:active {
     animation: fadein 2s;
 }
 
-#back {
-    color: white;
-    font-family: 'Lexend', sans-serif;
-
-    text-align: justify;
-    font-size: 3.3vmax;
-    /* width: 96%;
-    height: 96%; */
-}
-
 table {
     margin: 3vmax;
     padding-right: 5%;
@@ -105,7 +94,7 @@ table {
 a,
 u {
     text-decoration: none;
-    color: rgb(157, 234, 236);
+    color: rgb(0, 247, 255);
     animation: pulse 1s 3s;
 }
 
