--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -10,18 +10,22 @@
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {}
 
+/*===============================================================*/
+
 /* ------ GRID stuff ------ */
 .container {
     display: grid;
 
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 3fr 3fr 5fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 2fr;
 
     grid-template-areas:
         "header-one"
         "header-two"
         "header-three"
-        "header-four";
+        "header-four"
+        "header-five"
+        "header-six";
 }
 
 .header-one {
@@ -38,6 +42,14 @@
 
 .header-four {
     grid-area: header-four;
+}
+
+.header-five {
+    grid-area: header-five;
+}
+
+.header-six {
+    grid-area: header-six;
 }
 
 /* ------ Body stuff ------ */
@@ -62,7 +74,7 @@ a:active {
 a,
 u {
     text-decoration: none;
-    color: rgb(101, 247, 252);
+    color: rgb(0, 247, 255);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
     transform: scale(1);
     animation: pulse 1s 3s;
@@ -72,8 +84,8 @@ u {
     color: white;
     font-family: 'Lexend', sans-serif;
     text-align: justify;
-    font-size: 5.3vmin;
-    margin: 2vmax;
+    font-size: 5.5vmin;
+    margin: 1.1vmax;
     -webkit-animation: fadein 2s;
     /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 2s;
