--- a/CSS/main.css
+++ b/CSS/main.css
@@ -120,6 +120,7 @@ iframe {
 #playerThree,
 #playerFour {
     opacity: 0.6;
+    filter: blur(40px) saturate(4);
 }
 
 /* Format the landing page */
