--- a/CSS/main.css
+++ b/CSS/main.css
@@ -108,7 +108,6 @@ iframe {
 .iframe-one,
 .iframe-two,
 .iframe-three,
-.iframe-four,
 .cropper,
 #pressToStartDiv {
     grid-column-start: 1;
@@ -117,9 +116,8 @@ iframe {
 
 #playerOne,
 #playerTwo,
-#playerThree,
-#playerFour {
-    opacity: 0.6;
+#playerThree {
+    opacity: 0.7;
     filter: blur(35px) saturate(3) contrast(1.5) brightness(3);
 }
 
