added table if press space bar to piece to check details

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -109,7 +109,8 @@ iframe {
 .iframe-two,
 .iframe-three,
 .cropper,
-#pressToStartDiv {
+#pressToStartDiv,
+#infoSearchScreen {
     grid-column-start: 1;
     grid-row-start: 1;
 }
@@ -167,26 +168,45 @@ a:active {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
-  }
-  
-  .video-background iframe {
+}
+
+.video-background iframe {
     position: absolute;
     top: 50%;
     left: 50%;
     width: 100vw;
     height: 100vh;
     transform: translate(-50%, -50%);
-  }
-  
-  @media (min-aspect-ratio: 16/9) {
+}
+
+@media (min-aspect-ratio: 16/9) {
     .video-background iframe {
-      /* height = 100 * (9 / 16) = 56.25 */
-      height: 56.25vw;
+        /* height = 100 * (9 / 16) = 56.25 */
+        height: 56.25vw;
     }
-  }
-  @media (max-aspect-ratio: 16/9) {
+}
+
+@media (max-aspect-ratio: 16/9) {
     .video-background iframe {
-      /* width = 100 / (9 / 16) = 177.777777 */
-      width: 177.78vh;
+        /* width = 100 / (9 / 16) = 177.777777 */
+        width: 177.78vh;
     }
-  }
+}
+
+#infoSearchScreen {
+    z-index: 20;
+    display: none;
+    text-align: center;
+    font-size: 2vmin;
+    color: white;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
+}
+
+table, th, td {
+    border-collapse: collapse;
+    border-spacing: 0;
+    padding: 1vmin;
+    border: lightgrey 1px solid;
+}
